[package]
name = "web3_program"
version = "0.1.0"
edition = "2024"

[features]
Debug = []
no-entrypoint = []
devnet = []

[dependencies]
solana-program = "2.2.1" 
thiserror = "2.0.11"
num-traits = "0.2.19"
num-derive = "0.4.2"
borsh = "1.5.5"
bonfida-utils = "0.6.7"
phf = {version = "0.11.3", features = ["macros"]}
spl-token = {version = "7.0.0", features = ["no-entrypoint"]}
spl-name-service = {version = "0.3.1", features = ["no-entrypoint"]}
